fixed layout issues in readmore component

--- a/laab/src/readmore.css
+++ b/laab/src/readmore.css
@@ -182,3 +182,15 @@ html {
   scroll-behavior: smooth;
   overflow-anchor: none;
 }
+
+
+#footer2 {
+  position: absolute;
+  z-index: 80000;
+  top: -1000px;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
